Rewrite proofs more formally

--- a/diploma.tex
+++ b/diploma.tex
@@ -13,6 +13,8 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{hyperref}% http://ctan.org/pkg/hyperref
+\usepackage{cleveref}% http://ctan.org/pkg/cleveref
 
 %\documentclass[14pt]{matmex-diploma-custom}
 
@@ -22,6 +24,7 @@
 \newtheorem{theorem}{Теорема}
 \newtheorem{lemma}{Лемма}
 \newtheorem{corollary}{Следствие}
+\crefname{lemma}{Лемме}{Леммы}
 \newcommand{\overtext}[2]{\ensuremath{\stackrel{\mathrm{#1}}{\mathrm{#2}}}}
 %\newtheorem{proof}{Доказательсво}
 \begin{document}
@@ -113,11 +116,11 @@ Graphics Processing Units).
     \subsection{Исходный алгоритм}
         Пусть $(S, N,T,P)$ --- контекстно-свободная грамматика в нормальной форме Хомского, где $N$ --- множество нетерминалов, $T$ --- множество терминалов, $P$ --- множество правил вывода, $S$ --- стартовый нетерминал.\\
         Пусть $(V,E)$ --- помеченный ориентированный мультиграф, где $V$ --- множество вершин, $E \subset V \times T \times V$ --- множество рёбер.\\
-        Алгоритм состоит в построении транзитивного замыкания матрицы смежности графа, поределяемым специальным образом.
+        Алгоритм состоит в построении транзитивного замыкания матрицы смежности графа, определяемой специальным образом.
         Элементами такой матрицы являются подмножества $N$. Пусть $a$ --- матрица смежности графа. Тогда если $A\in a_{i,j}$, то существует $i\pi j$ такой, что $w(\pi)\in~L(G_A)$, где $i\pi j$ --- путь в графе из вершины $i$ в вершину $j$, $w(\pi)$ --- слово, образуемое метками на пути $\pi$, $L(G)$ --- язык порожденный грамматикой $G$, $G_A$ --- грамматика, получающаяся из $G$ заменой стартового нетерминала на $A$.
-        Введем операции на подмножествах N:
+        Введем операции на $N_1$ и $N_2$ --- произвольных подмножествах $N$:
         \begin{equation*}
-            N_1 \times N_2 = \{A~|~\exists B \in N,~\exists C \in N : A \rightarrow BC \in P\}
+            N_1 \times N_2 = \{A~|~\exists B \in N_1,~\exists C \in N_2 : A \rightarrow BC \in P\}
         \end{equation*}
         \begin{equation*}
             N_1 + N_2 = N_1 \cup N_2
@@ -158,7 +161,8 @@ Graphics Processing Units).
         \end{algorithmic}
         \end{algorithm}
     \subsection{Модифицированный алгоритм}
-        Множество ребер графа теперь является подмножеством $V \times T \times V \times \mathbb{R}$ --- у ребер графа появляется вес. Элементами используемой матрицы являются функции такого типа: $a_{i,j}: N\rightarrow\mathbb{R}\cup\{\infty\}$.\\
+        Множество ребер графа теперь является подмножеством $V \times T \times V \times \mathbb{R}$ --- у ребер появляется вес. Элементами используемой матрицы являются функции такого типа: $a_{i,j}: N\rightarrow\mathbb{R}\cup\{\infty\}$.\\
+        Элементами используемой матрицы являются подмножества: $N\times(\mathbb{R}\cup\{\infty\})$.\\
         На элементах матрицы водятся следующие операции:
         \begin{equation*}
             (N_1 \times N_2)(A) = \min\{N_1(B) + N_2(C)~|~A \rightarrow BC \in P\}
@@ -167,6 +171,8 @@ Graphics Processing Units).
             (N_1 + N_2)(A) = \min\{N_1(A), N_2(A)\}
         \end{equation*}
         Это в точности $(min, +)$-произведение.
+        
+        $a^i$ и $a^{cf}$ определяются как в исходном алгоритме, но с новыми операциями $(+)$ и $(\times)$.
         
         \begin{algorithm}[H]
         \begin{algorithmic}[1]
@@ -191,62 +197,112 @@ Graphics Processing Units).
         \EndFunction
         \end{algorithmic}
         \end{algorithm}
-    \subsection{Доказательство корректности}
-        Для доказательства понадобятся следующие обозначения:\\
-        Запись $i\pi j$ означает, что $\pi$ --- это путь в графе от вершины $i$ к вершине $j$.\\
-        Запись $t \overtext{A}{\rightarrow} w$ означает, что $t$ --- дерево вывода слова $w$ из нетерминала $A$.\\ 
-        $h(t)$ --- высота дерева $t$.\\
-        $l(\pi)$ --- сумма весов ребер, входящих в путь $\pi$.\\
-        $w(\pi), w(i\pi j)$ --- слово, образуемое конкатенацией меток на ребрах, входящих в путь $\pi$ в порядке прохождения.\\
-        $T(i,A,j) = \{t~|~\exists i\pi j~:~t\overtext{A}{\rightarrow}w(i\pi j)$ -- множество деревьев вывода из $A$ слов на путях $i\pi j$
-        $P(i,A,j) = \{i\pi j~|~\exists t~:~t\overtext{A}{\rightarrow}w(i\pi j)\}$\\
-        $sl(i,A,j) = \min\{l(i\pi j)~|~i\pi j \in P(i,A,j)\}$\\
-        $SP(i,A,j) = \{i\pi j~|~i\pi j \in P(i,A,j)~\land~l(i\pi j) = sl(i,A,j)\}$ --- множетво кратчайших путей из $i$ в $j$, таких что для каждого пути существует дерево вывода соотвествующего слова из $A$\\
-        $ST(i,A,j) = \{t\in T(i,A,j)~|~\exists i\pi j\in SP(i,A,j): ~t\overtext{A}{\rightarrow}w(i\pi j)~\land~l(t) = sl(i,A,j)\}$ --- множество наименьших по высоте деревьев вывода слова $w(\pi)$ из $A$ для кратчайших путей $i\pi j$.\\
-        $t_{left}$ --- левое поддерево дерева $t$, $t_{right}$ --- правое.\\
-        Такак рассматриваемая грамматика в нормальной форме Хомского, деревья вывода имеют следующую структуру: нулевая высота --- в узле один терминал, высота равна единице --- в узле нетерминал, один потомок. Все узлы, располагающиеся на большей высоте имеют по два потомка-нетерминала.
-        \begin{lemma}
-        \label{sequence}
-        Пусть $t \in ST(i,A,j),~h(t) > 1,~t_{left} \in T(i,B,r),~t_{right} \in T(r,C,j)$. Тогда либо $h(t_{left}) = h(t)-1$ и $t_{left} \in ST(i,B,r)$, либо $h(t_{right}) = h(t)-1$ и $t_{right} \in ST(r,C,j)$.
-             
-        \end{lemma}
-        \begin{proof}
-                Доказательство от противного.
-                Предположим, что все поддеревья $t$ высоты $h(t)-1$ не принадлежат $ST(v,B,u)$ ни для каких $u,B,v$.
-                Построим $t^{new} \in ST(i,A,j)$.
-                Если $t_{left} \notin ST(i,B,r)$, в качесте $t^{new}_{left}$ возьмем произвольное дерево из $ST(i,B,r)$ и соответствующий путь $i\pi_2 r$, иначе $t^{new}_{left} = t_{left}$.
-                По предположению $h(t^{new}_{left}) < h(t)-1$. Симметричные рассуждения проведем для $t_{right}$ и $t^{new}_{right}$.
-                Пусть $i\pi_{left} r$ --- кратчайший путь из путей соответствующих левому дереву, $r\pi_{right}j$ - правому.
-                Из условия леммы следует, что конкатенация путей $i\pi{left}r$ и $r\pi_{right}j$ --- путь, соответствующий $t^{new}$, при этом его длина не больше длины любоого пути, соответствующего $t$.
-                Из этого и того,  что $t \in ST(i,A,j)$, следует, что $t^{new} \in ST(i,A,j)$. Но тот факт, что $h(t) > h(t^{new})$, противоречит тому, что все деревья в $ST(i,A,j)$ имеют одинаковую высоту. Следовательно предположение было неверным.
-                Таким образом, лемма доказана.
-        \end{proof}
-        \begin{lemma}
-            Алгоритм на $k$-той итерации хранит такую матрицу $T$, что $T_{i,j}(A) = \min\{Lenght(i\pi j)~|~\exists t \overtext{A}{\rightarrow} Word(i\pi j) \land h(t) <= i+1\}$
-        \end{lemma}
-        \begin{proof}
-        Доказательтво по индукции.\\
-        База.\\
-        На итерации с номером 0 в , для которых существует дерево вывода высотой 1. Если путей существует несколько путей $i\pi j$, образующих слова, выводящиеся из одного нетерминала $A$ хранится только длина кратчайшего.\\
-        Предположение.\\
-            $k = n-1$\\
-            $T_{i,j}(A) = \min\{l(i\pi j)~|~\exists t \overtext{A}{\rightarrow} w(i\pi j)~\land~h(t) <= k+1\}$
-        Переход.
-             
-        \end{proof}
+    \subsection{Доказательство корректности}   
+       \subsubsection{Используемые обозначения}
+           Запись $i\pi j$ означает, что $\pi$ --- это путь в графе от вершины $i$ к вершине $j$.\\
+           $l(\pi)$ --- слово, образуемое конкатенацией меток на ребрах, входящих в путь $\pi$ в порядке прохождения.\\
+           $w(\pi)$ --- длина пути $\pi$, то есть сумма весов входящих в него ребер.
+           Путь $\pi$ называется подходящим для пары (A, k), если cуществует дерево вывода высоты $h\le k$ для строки $l(\pi)$ в $G_A=(N,\Sigma, P, A)$. Заметим, что если $\pi$ подходящий для пары $(A, k)$ то он также подходящий для пары $(A, n)$, где $n > k$.
+       \begin{lemma}
+       \label{le_any}
+           Пусть $D=(V,E)$ --- граф, $G=(N,\Sigma, P, S)$ --- контекстно-свободная грамматика в нормальной форме Хомского. Тогда, для любых $i$, $j$, $k$ и нетерминала $A\in N$
+       верно следующее: $a^k_{i,j}(A) \le w(\pi)$ для любого пути $i\pi j$ подходящего для пары $(A, k)$.
+       \end{lemma}
+       \begin{proof}
+           По индукции.\\
+           \textbf{База:} по построению $a^1$ = $a$. Все деревья вывода высоты 1 соотвествуют каждое своему ребру.\\
+           \textbf{Переход:} Пусть p > 1. Предположим, что утверждение леммы выполняется для $k < p$. Рассмотрим $a^p_{i,j}(A)$.По определениям операций $(\times)$, $(+)$ и умножения матриц:
+           \begin{equation}\label{apply_plus}
+               a^p_{i,j}(A) = min(a^{p-1}_{i,j}(A), (a^{p-1}\times a^{p-1})_{i,j}(A))
+           \end{equation}
+           \begin{equation}\label{apply_times}
+                (a^{p-1}\times a^{p-1})_{ij}(A) = \min_{r,A,B}\{a^{p-1}_{ir}(B) + a^{p-1}_{rj}(C)~|~\exists A\rightarrow BC \in P\}
+           \end{equation}                                 
+           По индукционному предположению $a^{p-1}_{i,j}(A) \le w(\pi)$ для всех подходящих паре $(A, p-1)$ путей $i\pi j$. Из этого и \eqref{apply_plus} следует, что $a^p_{i,j}(A) \le w(\pi)$ для всех $i\pi j$, подходящих $(A, p-1)$.
+           
+           Далее необходимо показать, что неравенство верно также и для путей, подходящих $(A, p)$, но не подходящих $(A, p-1)$. Рассмотрим такой путь $i\pi j$ и дерево вывода $l(\pi)$ в $G_A$ высоты $h=p$. Так как грамматика в нормальной форме Хомского, у корня есть ровно 2 ребенка. Они являются корнями подеревьев, являющихся по определению деревьями вывода некоторых строк $l_{left}$ в $G_B$ и $l_{right}$ в $G_C$ соответственно. Так как конкатенация $l_{left}$ и $l_{right}$ это $l(\pi)$, $i\pi j$ можно разбить на $i\pi_{left} r$ и $r\pi_{right} j$ так, чтобы выполнялось $l(\pi_{left}) = l_{left}$ и $l(\pi_{right}) = l_{right}$.
+            Из индукционного предположения:
+            \begin{equation*}
+                a^{p-1}_{ir}(B) \le w(\pi_{left})                
+            \end{equation*}
+            \begin{equation*}
+                a^{p-1}_{rj}(C) \le w(\pi_{right})                
+            \end{equation*}
+            Из этого и \eqref{apply_times}:
+            \begin{equation*}
+                (a^{p-1}\times a^{p-1})_{ij}(A) \le a^{p-1}_{ir}(B) + a^{p-1}_{rj}(C) \le w(\pi_{left}) + w(\pi_{right}) = w(\pi)
+            \end{equation*}
+            Таким образом:
+            \begin{align*}
+                a^p_{i,j}(A) &\le a^{p-1}_{ij}(A)                 &\le w(\pi) & \text{для}~i\pi j~\text{подходящих}~(A, p-1)\\
+                a^p_{i,j}(A) &\le (a^{p-1}\times a^{p-1})_{ij}(A) &\le w(\pi) & \text{для}~i\pi j~\text{подходящих}~(A, p)~\text{, но не}~(A, p-1)
+            \end{align*}
+            Cледовательно:
+            \begin{equation*}
+                a^p_{i,j}(A) \le w(\pi)~\text{для}~i\pi j~\text{подходящих}~(A, p)
+            \end{equation*}
+            Лемма доказана.
+       \end{proof}        
+              
+       \begin{lemma}
+       \label{eq_some}
+           Пусть $D=(V,E)$ --- граф, $G=(N,\Sigma, P, S)$ --- контекстно-свободная грамматика в нормальной форме Хомского. Тогда, для любых $i$, $j$, $k$ и нетерминала $A\in N$
+       верно следующее: либо существует путь $i\pi j$ подходящий для пары $(A, k)$, такой что $a^k_{ij}(A) = w(\pi)$, либо не существует путей подходящих для пары $(A, k)$ и $a^k_{ij}(A) = \infty$.
+       \end{lemma}
+       \begin{proof}
+            По индукции.\\
+            \textbf{База:} по построению $a^1$ = $a$. Все деревья вывода высоты 1 соотвествуют каждое своему ребру.\\
+            \textbf{Переход:} Пусть p > 1. Предположим, что утверждение леммы выполняется для $k < p$. Рассмотрим $a^p_{i,j}(A)$. Из \eqref{apply_plus} следует, что выполняется как минимум одно из следующих выражений:
+            Рассмотрим случаи:\\
+        
+            \begin{equation*}
+               a^p_{i,j}(A) = a^{p-1}_{i,j}(A) < \infty
+            \end{equation*}
+            По индукционнному предположению $a^{p-1}_{i,j}(A) < \infty$ тогда и только тогда, когда существует путь $i\pi j$ полходящий для пары $(A, p-1)$, он такжн будет подходящим для пары $(A, p)$.
+            
+            \begin{equation*}
+               a^p_{i,j}(A) = (a^{p-1}\times a^{p-1})_{i,j}(A) < \infty
+            \end{equation*}
+            Из \eqref{apply_times} следует, что $(a^{p-1}\times a^{p-1})_{i,j}(A) < \infty$ тогда и только тогда, когда существуют такие $r$, $B$ и $C$, что $a^{p-1}_{ir}(B) < \infty$, $a^{p-1}_{rj}(C) < \infty$ и $A~\rightarrow~BC~\in~P$. Также, для некоторых таких $r$, $B$ и $C$ выполняется $a^{p}_{ij}(A) = a^{p-1}_{ir}(B) + a^{p-1}_{rj}(C)$. По индукционному предположению существуют пути $i\pi_1 r$ и $r\pi_2 j$ подходящие для $(B, p-1)$ и $(C, p-1)$ соответственно, а следовательно и $T_B$ --- дерево вывода $l(\pi_1)$ в $G_B$ и $T_C$ --- дерево вывода $l(\pi_2)$ в $G_C$ соответственно. Конкатенация $i\pi_1 r$ и $r\pi_2 j$ образует путь $i\pi j$, такой что $l(\pi)$ это конкатенция $l(\pi_1)$ и $l(\pi_2)$. При этом дерево, где в корне A, левое поддерево это $T_B$, а правое --- $T_C$, будет является деревом вывода $l(pi)$ в $G_A$б так как $A\rightarrow BC \in P$. Следовательно $i\pi j$ подходящий для пары $(A, k)$ и верно следующее:
+            \begin{align*}
+               a^{p}_{i,j}(A) &=\\
+                              &= (a^{p-1}\times a^{p-1})_{i,j}(A)\\
+                              &= a^{p-1}_{ir}(B) + a^{p-1}_{rj}(C)\\
+                              &= w(\pi_1) + w(\pi_2)\\
+                              &= w(\pi)
+            \end{align*}
+            В этом случае индукционный переход также выполняется.
+            \begin{equation*}
+               a^p_{i,j}(A) = a^{p-1}_{i,j}(A) = (a^{p-1}\times a^{p-1})_{i,j}(A) = \infty
+            \end{equation*}
+            По индукционному предположению не существует $i\pi j$ подходящего для $(A, p-1)$. Предположим, что существует путь $i\pi j$ подходящий для $(A, p)$ и неподходящий для $(A, p-1)$. Рассмотрим дерево вывода $l(\pi)$ в $G_A$ высоты $h=p$. Так как грамматика в нормальной форме Хомского, у корня есть ровно 2 ребенка. Они являются корнями подеревьев, являющихся по определению деревьями вывода некоторых строк $l_{left}$ в $G_B$ и $l_{right}$ в $G_C$ соответственно, высота каждого из этих деревьев строго меньше $p$, Так как конкатенация $l_{left}$ и $l_{right}$ это $l(\pi)$, $i\pi j$ можно разбить на $i\pi_{left} r$ и $r\pi_{right} j$ так, чтобы выполнялось $l(\pi_{left}) = l_{left}$ и $l(\pi_{right}) = l_{right}$. Таким образом, $i\pi_{left} r$ походящий для $(B, p-1)$, а $r\pi{_right} j$ подходящий для $(C, p-1)$. Следовательно, по индукционному предположению, $a^{p-1}_{ir}(B) < \infty$ и $a^{p-1}_{rj}(C) < \infty$. Так как $A\rightarrow BC \in P$, по определению $(\times)$, $a^p_{i,j}(A) \le a^{p-1}_{ir}(B) + a^{p-1}_{rj}(C) < \infty$. Это противоречит предположениюо условю $a^p_{i,j}(A) = \infty$, таким образом предположение о существовании пути $i\pi j$ подходящего для $(A, p)$ и неподходящего для $(A, p-1)$, неверно.
+            
+            Таким образом утверждение леммы выполняетнся при p, если оно выполняется при k < p. Лемма доказана.            
+       \end{proof}
+        
         \begin{theorem}
-            Алгоритм 2 возвращает матрицу, такую, что $T_{i,j}(A) = sl(i,A,j)$
-        \end{theorem}   
-            
+        \label{th_correctness}
+            Пусть $D=(V,E)$ --- граф без циклов отрицательного веса, $G=(N,\Sigma, P, S)$ --- контекстно-свободная грамматика в нормальной форме Хомского. Тогда $a^{cf}_{ij}(A) = \infty$ если не существует пути $i\pi j$ такого, что существует дерево вывода строки $l(\pi)$ в $G_A$, и минимальной длине среди всех таких путей в противном случае.
+        \end{theorem}
         \begin{proof}
-            Рассмотрим  $T = \bigcup_{i,j \in V, A \in N}ST(i,A,j)$. Пусть $t \in T$
-            По Лемме \ref{sequence} если $h(t) > 1$, существует $t_{new} \in T$ такое, что $h(t_{new}) = h(t)-1$. Таким образом, можно составить последовательность $\{t_i\}^{h(t)}_{i=1}$ такую, что $t_i \in T \land h(t_i) = i$
+            Предположим что не существует пути $i\pi j$ такого, что существует дерево вывода строки $l(\pi)$ в $G_A$. Тогда по~\cref{eq_some} для любого p $a^p_{ij}(A) = \infty$, следовательно $a^{cf}_{ij}(A) = \infty$.
             
-           По Лемме 4.1\cite{DBLP:journals/corr/AzimovG17} алгоритм на итерации с номером $i$ 
+            Предположим cуществует $i\pi j$ такой, что существует дерево вывода строки $l(\pi)$ в $G_A$. Так как в графе нет циклов отрицательного веса, найдется путь $i\pi_m j$ такой, что существует дерево вывода cтроки $l(\pi_m)$ в $G_A$ и при этом $w(\pi_m) \le w(\pi)$ для любого пути $i\pi j$ такого, что существует дерево вывода строки $l(\pi)$ в $G_A$. Пусть h --- высота некоторого дерева вывода строки $l(\pi_m)$ в $G_A$. По~\cref{le_any} $a^p_{ij}(A) \le w(\pi_m)$ для $p \ge h$, а по~\cref{eq_some} $a^p_{ij}(A) = w(\pi)$ для некоторого $i\pi j$ подходящего для $(A, p)$. По выбору $\pi_m$
+         $w(\pi_m) \le w(\pi)$. Следовательно $w(\pi_m) \le a^p_{ij}(A) \le w(\pi_m)$, а значит $a^p_{ij}(A) = w(\pi_m)$ для $p \ge h$, следовательно $a^{cf}_{ij}(A) = w(\pi_m)$. Теорема доказана.
+        \end{proof}
+        
+        \begin{theorem}
+        \label{th_finiteness}
+            Пусть $D=(V,E)$ --- граф без циклов отрицательного веса, $G=(N,\Sigma, P, S)$ --- контекстно-свободная грамматика в нормальной форме Хомского. Тогда $a^{cf}_{ij}(A) = a^p_{ij}(A)$ начиная с некоторого p.
+        \end{theorem}
+        \begin{proof}
+            Для каждых $i$, $j$, $A$ построим множество путей $i\pi j$ таких что $w(\pi) = a^{cf}_{ij}(A)$ и существует дерево вывода $l(\pi)$ в $G_A$. Из каждого такого множества, кроме пустых выберем представителя и обозначим высоту некоторого соответствующего дерева вывода за $h^A_{ij} > 0$, а если множество пустое, то пусть $h^A_{ij} = 0$. Пусть $h_{max} = \max_{i, j, A}(h^A_{ij})$. Если $h_{max} = 0$, то в графе нет ни одного соответствующего пути и $a^1_{i,j}(A) = a^{cf}_{i,j}(A) = \infty$. Иначе, по~\cref{le_any}, $a^{h_{max}}_{ij}(A) \le a^{cf}_{ij}(A)$, а следовательно по определению $a^{cf}$ $a^{h_{max}}_{ij}(A) = a^{cf}_{ij}(A)$. Теорема доказана.     
         \end{proof}
     \subsection{Оценка времени работы}
-\section{Экспериментальное исследование}
+    Оценка $O(|V|^5|N|^3)$. Умножение матриц в алгоритме выполняется за $O(|V|^3 * |N|^2)$. Оценка на количество итераций, $|V|^2|N|$, исходит из того что каждую итерацию в матрице будет фиксироваться одно значение. Рассуждения следует основывать на минимальных по высоте деревьях вывода кратчайших путей. !ДОПИСАТЬ ДОКАЗАТЕЛЬСТВО!
     
+\section{Экспериментальное исследование}
+    !РЕАЛИЗОВАТЬ АЛГОРИТМ И ЗАТЕСТИТЬ, ОПИСАТЬ ЭТО! 
  %У заключения нет номера главы
 \section*{Заключение}
     В данной работе модифицирован алгоритм поиска пути с контекстно-свободными %ограничениями в помеченном графе\cite{DBLP:journals/corr/AzimovG17} для поиска %кратчайшего пути. Для достижения данной цели были решены следующие задачи:
@@ -254,7 +310,7 @@ Graphics Processing Units).
         \item алгоритм модифицирован с помощью $(min, +)$-произведения;
         \begin{itemize}
             \item доказана корректность;
-            \item дана оценка времени работы: $O(e^{|V||E||N|})$;
+            \item дана оценка времени работы: $O(|V|^5|N|^3)$;
         \end{itemize}
         \item проведено экспериментальное исследование модифицированного алгоритма;
     \end{itemize}
